--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cocktaildb_api",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://trujillorj.github.io/cocktail_world/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -15,6 +16,8 @@
     "uuid": "^3.4.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
